grafana-ldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      serviceAccountName: grafana    
      containers:
      - name: grafana
        image: grafana/grafana:8.5.13
        ports:
        - name: grafana
          containerPort: 3000
        resources:
        volumeMounts:
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources
            readOnly: false
          - name: config
            mountPath: /etc/grafana/grafana.ini
            subPath: grafana.ini
          - name: dashboards
            mountPath: /var/lib/grafana/dashboards
          - name: dashboardproviders
            mountPath: /etc/grafana/provisioning/dashboards/
          - name: grafana-storage
            mountPath: /var/lib/grafana
          - name: grafana-ldap
            mountPath: /etc/grafana/ldap.toml
            subPath: ldap.toml
      volumes:
        - name: datasources
          configMap:
            defaultMode: 420
            name: grafana-datasources
        - name: config
          configMap:
            name: grafana-ini
        - name: dashboardproviders
          configMap:
            name: grafana-dashboardproviders
        - name: dashboards
          configMap:
            name: grafana-dashboards
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-ldap
          secret:
            secretName: grafana-ldap-toml
