openldap-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openldap
  name: openldap
  namespace: auth-system
spec:
  type: "NodePort"
  ports:
  - name: "port-689"
    port: 689
    protocol: TCP
    targetPort: 689
  - name: "port-389"
    port: 389
    protocol: TCP
    targetPort: 389
    nodePort: 30389
  selector:
    app: openldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openldap
  name: openldap
  namespace: auth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - image: osixia/openldap:latest
        name: openldap
        ports:
        - name: "port-389"
          containerPort: 389
        - name: "port-689"
          containerPort: 689
        volumeMounts:
        - name: openldap-pvc-data
          mountPath: "/var/lib/ldap"
        - name: openldap-pvc-etc
          mountPath: "/etc/ldap/slapd.d"
      volumes:
      - name: openldap-pvc-data
        persistentVolumeClaim:
          claimName: openldap-pvc-data
      - name: openldap-pvc-etc
        persistentVolumeClaim:
          claimName: openldap-pvc-etc
