k8s-ocp-web-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: auth-system
  labels:
    app: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
      - name: console-app
        # OCP K8s version map (https://gist.github.com/jeyaramashok/ebbd25f36338de4422fd584fea841c08)
        # Image (https://quay.io/repository/openshift/origin-console?tab=tags)
        # Till image (origin-console:4.11) Virtualizattion menu is available
        # Create Dex CA (kubectl create cm dex-cert --from-file=ssl/ca.crt -n kube-system)
        image: quay.io/openshift/origin-console:4.11
        volumeMounts:
        - mountPath: /tmp/tls.crt
          name: dex-cert
          subPath: tls.crt
      #- name: monitoring-plugin
        #image: docker.io/prasenforu/ocp-mon-plug:v1
      volumes:
      - name: dex-cert
        secret:
          defaultMode: 420
          secretName: dex
---
kind: Service
apiVersion: v1
metadata:
  name: console
  namespace: auth-system
spec:
  selector:
    app: console
  type: NodePort
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console
  namespace: auth-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    #cert-manager.io/cluster-issuer: "private-ca"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - console.apps.k8s.cloudcafe.tech
    secretName: console-cert
  rules:
  - host: console.apps.k8s.cloudcafe.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9000
