kubemon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy-monitoring
  namespace: auth-system
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - secretName: k8s-dashboard-external-tls
    hosts:
    - prom.172.30.1.2.nip.io
    - alert.172.30.1.2.nip.io
  rules:
  - host: prom.172.30.1.2.nip.io
    http:
      paths:
        - path: /oauth2
          pathType: Prefix
          backend:
            service:
              name: oauth2-proxy
              port:
                number: 4180  
  - host: alert.172.30.1.2.nip.io
    http:
      paths:
        - path: /oauth2
          pathType: Prefix
          backend:
            service:
              name: oauth2-proxy
              port:
                number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: prometheus-external-auth2
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prom.172.30.1.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubemon-prometheus
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: alertmanager-external-auth2
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alert.172.30.1.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubemon-alertmanager
            port:
              number: 9093
