minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-store
  labels:
    name: minio-store
spec:
  clusterIP: None  
  ports:
  - port: 9000
    name: minio
  selector:
    name: minio-store
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-store
spec:
  type: NodePort
  selector:
    name: minio-store
  ports:
  - name: minio-console
    protocol: TCP
    port: 9090
    targetPort: 9090
  - name: minio-api
    protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio-store
  labels:
    name: minio-store
spec:
  serviceName: minio
  replicas: 3
  selector:
    matchLabels:
      name: minio-store
  template:
    metadata:
      labels:
        name: minio-store
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server   # who are our servers in cluster (below)
        - http://minio-0.minio.minio-store.svc.cluster.local/data
        - http://minio-1.minio.minio-store.svc.cluster.local/data
        - http://minio-2.minio.minio-store.svc.cluster.local/data
        - --console-address   # which port for console
        - :9090
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9090
          hostPort: 9090          
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /root/.minio/certs/CAs/ca.crt
          name: dex-cert
          subPath: ca.crt
      volumes:
      - name: dex-cert
        configMap:
          defaultMode: 420
          name: dex-cert
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio-store
  labels:
    name: minio-store
spec:
  tls:
  - secretName: minio
    hosts:
    - minio-console.34.125.51.84.nip.io
  ingressClassName: nginx
  rules:
  - host: minio-console.34.125.51.84.nip.io
    http:
      paths:
      - backend:
          service:
            name: minio-svc
            port:
              number: 9090
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio-store
  labels:
    name: minio-store
spec:
  ingressClassName: nginx
  rules:
  - host: minio-api.34.125.51.84.nip.io
    http:
      paths:
      - backend:
          service:
            name: minio-svc
            port:
              number: 9000
        path: /
        pathType: Prefix
